--- a/content/post9242022.html
+++ b/content/post9242022.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -29,11 +29,11 @@
   </header>
 
   <article>
-   
+
 
     <h2> <br><br><br><br>
-    New Bike Day</h2>
-    <h3>9-24-2022</h3>
+      New Bike Day</h2>
+    <h3>24-Sep-2022</h3>
     <p class="mainpar">
       &emsp;&emsp;I think motorcycles are cool, so I bought a another one. The only issue is I can only
       guarantee at least one bike for this period in my life right now and may lose access to my other bikes.
@@ -43,39 +43,54 @@
       exactly. How about an old DRZ? Closer but missing one key aspect. I wanted this bike to not only
       be able to do anything but to be able to be competitive in a most races, which is very
       different when people think of a do it all bike because you end up with bike that’s
-       not great on the road. I think this bike can ready do it all though.
+      not great on the road. I think this bike can ready do it all though.
     </p>
-    <p>    
-      &emsp;&emsp;So, I grabbed myself a hardly ridden 2019 CRF450l for 8gs with only 284 miles on the odometer and that
-      was the start of it all. Now this isn’t a bike I’m going to have and turn around and sell in 
-      couple years, I’m riding this thing into the ground dragging it from state to state with me as I 
-      start my career in engineering and its going to switch jobs as much as indecisive freshman in 
-      collage. One of the first things you expect me to do is get a pipe and ECU, but not I’m leaving stock 
-      as I love a quite bike and the mellow smooth power delivery this thing has (that is after you 
-      remove the backfire screen from the air filter).
-    </p> 
     <p>
-      &emsp;&emsp;So here is a little background to help you understand why I picked this bike. I grew 
-      up riding dirt bikes and racing throughout my teenage years, even entered a couple WORCS races. 
-      Now I’m in my late twenties and always up for going out into the wild completely unprepared 
-      whether that be the open water or deserts of Arizona. So why did I get this bike over a KTM EXC? 
-      Well for one thing its quieter and vibrates a lot less, second, it’s a Honda so I can get parts for 
-      it anywhere, and last this shares it’s motor(mostly) and suspension with all the modern Honda 450’s of 
-      which I happen to own a 2020 CRF450r at the moment.This means I can directly take that’s bikes 
-      wheels and suspension and throw them on big L and go to town at the mx track abiet with 60 
+      &emsp;&emsp;So, I grabbed myself a hardly ridden 2019 CRF450l for 8gs with only 284 miles on the odometer and that
+      was the start of it all. Now this isn’t a bike I’m going to have and turn around and sell in
+      couple years, I’m riding this thing into the ground dragging it from state to state with me as I
+      start my career in engineering and its going to switch jobs as much as indecisive freshman in
+      collage. One of the first things you expect me to do is get a pipe and ECU, but not I’m leaving stock
+      as I love a quite bike and the mellow smooth power delivery this thing has (that is after you
+      remove the backfire screen from the air filter).
+    </p>
+    <p>
+      &emsp;&emsp;So here is a little background to help you understand why I picked this bike. I grew
+      up riding dirt bikes and racing throughout my teenage years, even entered a couple WORCS races.
+      Now I’m in my late twenties and always up for going out into the wild completely unprepared
+      whether that be the open water or deserts of Arizona. So why did I get this bike over a KTM EXC?
+      Well for one thing its quieter and vibrates a lot less, second, it’s a Honda so I can get parts for
+      it anywhere, and last this shares it’s motor(mostly) and suspension with all the modern Honda 450’s of
+      which I happen to own a 2020 CRF450r at the moment.This means I can directly take that’s bikes
+      wheels and suspension and throw them on big L and go to town at the mx track abiet with 60
       extra pounds wet. I think it's 90 as competitive as the EXC and twice a good to own and live with on the daily.
     </p>
     <p>
       &emsp;&emsp;When got the bike it had a sad set of saggy foot pegs that weren’t made for the bike and
-      leopard print seat cover. The good thing was even though they didn’t mention the scrapes from dropping it on the road
-      I could tell this bike had never been offroad and still had original seat cover(100+ dollars saved). 
+      a leopard print seat cover. The good thing was even though they didn’t mention the scrapes from dropping it on the
+      road
+      I could tell this bike had never been offroad and still had original seat cover (100+ dollars saved).
+      A new air filter to replace the original that was falling apart, a bit of grease, and the bike was ready to go.
+    </p>
+    <p>
+      &emsp;&emsp;The next thing that had to be put into order was the rider to be able to ride anywhere
+      and anything. So, the motos and diet had to start. Needed to drop about 30 pounds and get pass
+      5 Laps of pushing on the moto Track. I started riding twice a week, running twice a week, and
+      cut a meal out every day starting in October of 2022. Any type of riding helped at this point
+      I was so out of it. Next thing I did was sign myself up for a race, I picked a December GP at
+      canyon raceway to work toward. This would be a 50 min race on a 7 to 10 mile loop.
+    </p>
+    <h3>Race 1 Report:</h3>
+    <p>
+      &emsp;&emsp;
+    </p>
+    <p>
+      &emsp;&emsp;
     </p>
     <p>
       &emsp;&emsp;
     </p>
 
-
-    
   </article>
   <footer>
     <a href="https://www.instagram.com/barticus455/">
