--- a/content/post9242022.html
+++ b/content/post9242022.html
@@ -67,9 +67,8 @@
     </p>
     <p>
       &emsp;&emsp;When got the bike it had a sad set of saggy foot pegs that weren’t made for the bike and
-      a leopard print seat cover. The good thing was even though they didn’t mention the scrapes from dropping it on the
-      road
-      I could tell this bike had never been offroad and still had original seat cover (100+ dollars saved).
+      a leopard print seat cover. The good thing was I could tell this bike had never been offroad,
+      even thoughthey didn’t mention the scraps from dropping it on the road. 
       A new air filter to replace the original that was falling apart, a bit of grease, and the bike was ready to go.
     </p>
     <p>
@@ -82,14 +81,40 @@
     </p>
     <h3>Race 1 Report:</h3>
     <p>
-      &emsp;&emsp;
+      &emsp;&emsp;The middle of Dec rolls around much quicker than I expected, I had only got about dozens
+      rides in but ready as ever. Dec 17th and have to get up at 4am to get to race on time for practice
+      at 7:30 and ride my first time on a motocross track in about 2 years. Lucky for its canyon raceway
+      so it hardly changed in about decade to tackling it with 285lb bike shouldn’t be so bad. The only 
+      things done to the bike was putting on a set of Dunlop en91 tire (great tire but only for about 6 
+      hours), rim locks, kickstand bypass, new grips, removed mirrors, remove backfire screen, removed 
+      license plate holder, and some duct tape numbers. 
+    </p>
+    <p>
+      &emsp;&emsp;First practice and the nerves have ready set in and ride fast like that but also don’t 
+      breathe the entire time. It’s a mass start and I’m blowing pass people as the off-road sections are
+      still smooth but sun it still in my eyes to blow off back a berm at 40 mph and run into two big
+      green jumping Cholla’s. Green cactus pulp is everywhere but at least I didn’t go down and the
+      front wheel handled most of the needles, just bit in my right hand I had take out with tweezers.
+      I call that a big success as I got most of the jumps in 2 laps even though I did get major arm
+      pump in about 6 mins. 
+    </p>
+   
+    <p>
+      &emsp;&emsp;Unfortunately, my B class race was at 2pm after the Team Race (main event), ATVs, and UTV.
+      I was in for a long day and rough courses.  At least I had time for my arm pump to calm down, 
+      but it was warm, dusty, and rough by the time my race came around. For the start I was able to
+      snag a top ten start of about 30 people on the gate only to realize my stock suspension was not
+      even close to being stiff enough to handle the course. While training the suspension was fine as
+      I only did off road trails, but as soon as I hit tight 2+ foot plus bump and whoops I quickly
+      bottomed out even going slow. I quickly got a major arm pump but was able to ride through it as
+      the motocross track was smooth and easy to ride plus, I jumped things other didn’t in my class.
+      In the end I got 5th in my class out of 7 and 14/30 in the entire race, which I call a huge
+      success even if I didn’t move forward at all because I didn’t crash and got out healthy. 
     </p>
     <p>
       &emsp;&emsp;
     </p>
-    <p>
-      &emsp;&emsp;
-    </p>
+    <h3> To be continued </h3>
 
   </article>
   <footer>
