--- a/content/post9242022.html
+++ b/content/post9242022.html
@@ -30,8 +30,8 @@
 
   <article>
 
-
-    <h2> <br><br><br><br>
+    <img class="embedded-img" src="/images/Newbikeday1.jpg" alt="crf450l on 35mm">
+    <h2> <br>
       New Bike Day</h2>
     <h3>24-Sep-2022</h3>
     <p class="mainpar">
@@ -71,7 +71,10 @@
       even thoughthey didn’t mention the scraps from dropping it on the road. 
       A new air filter to replace the original that was falling apart, a bit of grease, and the bike was ready to go.
     </p>
+    <img class="embedded-img2" src="/images/crf450l cleaned up.jpg" alt="crf450l after being set up">
+    <br>
     <p>
+      <br>
       &emsp;&emsp;The next thing that had to be put into order was the rider to be able to ride anywhere
       and anything. So, the motos and diet had to start. Needed to drop about 30 pounds and get pass
       5 Laps of pushing on the moto Track. I started riding twice a week, running twice a week, and
@@ -95,10 +98,10 @@
       still smooth but sun it still in my eyes to blow off back a berm at 40 mph and run into two big
       green jumping Cholla’s. Green cactus pulp is everywhere but at least I didn’t go down and the
       front wheel handled most of the needles, just bit in my right hand I had take out with tweezers.
-      I call that a big success as I got most of the jumps in 2 laps even though I did get major arm
-      pump in about 6 mins. 
+      I call that a big success as I got most of the jumps in 2 laps even with major arm
+      pump after first off-road section. 
     </p>
-   
+    <img class="embedded-img2" src="/images/crf450l race 1.jpg" alt="crf450l after being set up">
     <p>
       &emsp;&emsp;Unfortunately, my B class race was at 2pm after the Team Race (main event), ATVs, and UTV.
       I was in for a long day and rough courses.  At least I had time for my arm pump to calm down, 
