--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </p>
       <p>
       This site will be a place for me to post on a varity of topics. This may be engineering topics, motorcycle adventure, how to guides,
-       picture I took and their story, or even open souces hardware if I ever get around to it. So take a look in the Blog Posts link if
+       pictures I took and their story, or even open souces hardware if I ever get around to it. So take a look in the Blog Posts link if
         you want hear about any of those things.
       </p>
 
