--- a/content/post9242022.html
+++ b/content/post9242022.html
@@ -104,15 +104,15 @@
     <img class="embedded-img2" src="/images/crf450l race 1.jpg" alt="crf450l after being set up">
     <p>
       &emsp;&emsp;Unfortunately, my B class race was at 2pm after the Team Race (main event), ATVs, and UTV.
-      I was in for a long day and rough courses.  At least I had time for my arm pump to calm down, 
-      but it was warm, dusty, and rough by the time my race came around. For the start I was able to
-      snag a top ten start of about 30 people on the gate only to realize my stock suspension was not
-      even close to being stiff enough to handle the course. While training the suspension was fine as
+      I was in for a long day and a rough course.  At least I had time for my arm pump to calm down, 
+      but it was going to be warm, dusty, and rough by the time my race came around. For the start I was able to
+      snag a top five start of about 30 people on the gate only to realize my stock suspension was not
+      even close to being stiff enough to handle the course. While during training the suspension was fine as
       I only did off road trails, but as soon as I hit tight 2+ foot plus bump and whoops I quickly
       bottomed out even going slow. I quickly got a major arm pump but was able to ride through it as
-      the motocross track was smooth and easy to ride plus, I jumped things other didn’t in my class.
+      the motocross track was smooth and easy to ride plus, I jumped things others didn’t in my class.
       In the end I got 5th in my class out of 7 and 14/30 in the entire race, which I call a huge
-      success even if I didn’t move forward at all because I didn’t crash and got out healthy. 
+      success even if I didn’t move forward at all, but I didn’t crash and got out healthy. 
     </p>
     <p>
       &emsp;&emsp;
