--- a/content/post9242022.html
+++ b/content/post9242022.html
@@ -86,38 +86,53 @@
     <p>
       &emsp;&emsp;The middle of Dec rolls around much quicker than I expected, I had only got about dozens
       rides in but ready as ever. Dec 17th and have to get up at 4am to get to race on time for practice
-      at 7:30 and ride my first time on a motocross track in about 2 years. Lucky for its canyon raceway
-      so it hardly changed in about decade to tackling it with 285lb bike shouldn’t be so bad. The only 
+      at 7:30 and ride my first time on a motocross track in about 2 years. Lucky for me canyon raceway
+      has hardly changed in about a decade so tackling it with 300lb bike shouldn’t be so bad. The only 
       things done to the bike was putting on a set of Dunlop en91 tire (great tire but only for about 6 
-      hours), rim locks, kickstand bypass, new grips, removed mirrors, remove backfire screen, removed 
-      license plate holder, and some duct tape numbers. 
+      hours), rim locks, kickstand sensor bypass, new grips, removed mirrors, remove backfire screen, removed 
+      license plate holder, and slapped on a set of duct tape numbers. 
     </p>
     <p>
-      &emsp;&emsp;First practice and the nerves have ready set in and ride fast like that but also don’t 
-      breathe the entire time. It’s a mass start and I’m blowing pass people as the off-road sections are
-      still smooth but sun it still in my eyes to blow off back a berm at 40 mph and run into two big
-      green jumping Cholla’s. Green cactus pulp is everywhere but at least I didn’t go down and the
-      front wheel handled most of the needles, just bit in my right hand I had take out with tweezers.
-      I call that a big success as I got most of the jumps in 2 laps even with major arm
-      pump after first off-road section. 
+      &emsp;&emsp;First practice and the nerves have already set in, I ride fast like that but also don’t breathe
+      the entire time. It’s a mass start and I’m blowing passed people as the off-road sections are still smooth.
+      But on way in back to the track I end up blowing off back a berm at 40 mph and run into two big green jumping
+      Cholla’s because the sun was in my eyes until about 2 feet from my new found take off ramp. Green cactus pulp was
+      everywhere but at least I didn’t go down and the front wheel handled most of the needles, just bit in my right
+      hand that I had take out with tweezers. I call that a big success as I got most of the jumps in 2 laps even with
+      major arm pump after first off-road section and only lost my left side blinker, which yes did stay on for all my
+      racing.
     </p>
     <img class="embedded-img2" src="/images/crf450l race 1.jpg" alt="crf450l after being set up">
     <p>
-      &emsp;&emsp;Unfortunately, my B class race was at 2pm after the Team Race (main event), ATVs, and UTV.
-      I was in for a long day and a rough course.  At least I had time for my arm pump to calm down, 
-      but it was going to be warm, dusty, and rough by the time my race came around. For the start I was able to
-      snag a top five start of about 30 people on the gate only to realize my stock suspension was not
-      even close to being stiff enough to handle the course. While during training the suspension was fine as
-      I only did off road trails, but as soon as I hit tight 2+ foot plus bump and whoops I quickly
-      bottomed out even going slow. I quickly got a major arm pump but was able to ride through it as
-      the motocross track was smooth and easy to ride plus, I jumped things others didn’t in my class.
-      In the end I got 5th in my class out of 7 and 14/30 in the entire race, which I call a huge
-      success even if I didn’t move forward at all, but I didn’t crash and got out healthy. 
+      &emsp;&emsp;Unfortunately, my B class race was at 2pm after the Team Race (main event), ATVs, and UTV. At least
+      I had time for my extreme arm pump to calm down I had in practice, but it was going to be warm, dusty, and rough
+      by the time my race came around. For the start I was able to snag a top five start of about 30 people on the gate 
+      only to realize my stock suspension and overweight bike was not even close to being stiff enough to handle the course.
+      While during my training the suspension was fine as I only did off road trails, but as soon as I hit steep 2+ foot
+      plus bump and whoops I quickly bottomed out even going slow. I quickly got a major arm pump but was able to ride
+      through it as the motocross track was smooth and easy to ride. It also helped that I jumped things others didn’t
+      in my class. In the end I got 5th in my class out of 7 and 14/30 in the entire race, which I call a huge success even
+      if I didn’t move forward at all, but I didn’t crash and got out healthy. 
     </p>
     <p>
-      &emsp;&emsp;
+      &emsp;&emsp;For the next race I signed up for the Outlaw endure in Wickenburg AZ. I had to get a few upgrades like new rear
+      spring, handguards, and real number plates for this race. The new 5.6 kg/mm shock spring was most needed to help
+      the rear end stay up under the 500 pounds of the bike and me. If you know anything about this race you would know that
+      no modification in the world to make a 300 pound bike with DOT approved tire be competive and with me as pilot it was even farther
+      from the front. To say this race any upsides would be a big lie. I crashed twice in the first stage, hard enough for my apple watch
+      to call emergency services both times. Popped a hole in my arm leave blood running down to my hand for the next hour. My bike has to be dragged down the mountain the seconds stage. The bike had trouble starting
+      after every fall due to safety feature. Finally I completely bonked after having a heart rate of 160 bpm for 3+ hours. Which is
+      more then when I run a marathon or half. i ended up only finishing half the stages officially putting me 8th from last out of ~100 
+      people in my class.
     </p>
-    <h3> To be continued </h3>
+    <p>
+      &emsp;&emsp;Even if the races didn't go as planned always the first six month of of owning this bike has shown me
+      that I absoluty made the right purchase. There is no other bike I would choose for my style and stupidity I try to
+      achieve on this bike. I can commute to work one day and next hit to motocross track all while being able be 50 state legal. 
+      thats all my thought for this chapter but there will definitely be more as I'm taking this bike with me across the country
+      to move to Rainy state of Oregon.
+    </p>
+    <h3> </h3>
 
   </article>
   <footer>
